Symlink TECS software under ./bin

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -2,6 +2,9 @@
 parts =
     node
     js_dependencies
+    nand2tetris
+    symlinks
+    chmod
 versions = versions
 show-picked-versions = true
 
@@ -11,13 +14,10 @@ zc.buildout = 2.2.1
 zc.recipe.egg = 1.3.2
 z3c.recipe.mkdir = 0.6
 collective.recipe.cmd = 0.9
-gp.recipe.node==0.10.22.1
 hexagonit.recipe.cmmi = 2.0
-hexagonit.recipe.cmmi==2.0
 hexagonit.recipe.download = 1.7
-gp.recipe.node==0.10.22.1
 python-archive = 0.2
-
+cns.recipe.symlink = 0.2.3
 
 [node]
 recipe = gp.recipe.node
@@ -33,3 +33,25 @@ on_update = True
 cmds =
     ${buildout:directory}/bin/npm install
 
+[nand2tetris]
+recipe = hexagonit.recipe.download
+url = http://www.nand2tetris.org/software/nand2tetris.zip
+strip-top-level-dir = true
+
+[symlinks]
+recipe = cns.recipe.symlink
+symlink =
+	${buildout:directory}/parts/nand2tetris/tools/Assembler.sh = ${buildout:directory}/bin/Assembler.sh
+	${buildout:directory}/parts/nand2tetris/tools/CPUEmulator.sh = ${buildout:directory}/bin/CPUEmulator.sh
+	${buildout:directory}/parts/nand2tetris/tools/HardwareSimulator.sh = ${buildout:directory}/bin/HardwareSimulator.sh
+	${buildout:directory}/parts/nand2tetris/tools/JackCompiler.sh = ${buildout:directory}/bin/JackCompiler.sh
+	${buildout:directory}/parts/nand2tetris/tools/TextComparer.sh = ${buildout:directory}/bin/TextComparer.sh
+	${buildout:directory}/parts/nand2tetris/tools/VMEmulator.sh = ${buildout:directory}/bin/VMEmulator.sh
+
+[chmod]
+# Lame.
+recipe = collective.recipe.cmd
+on_install = true
+on_update = true
+cmds =
+	chmod 775 ${buildout:directory}/bin/*
