Added python script to convert bitmap images into a format usable in a JACK program.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -5,8 +5,20 @@ parts =
     nand2tetris
     symlinks
     chmod
+    eggs
 versions = versions
 show-picked-versions = true
+develop =
+    ${buildout:directory}/src/python/tecs_tools
+develop_eggs =
+    tecs_tools
+
+[eggs]
+recipe = zc.recipe.egg
+eggs =
+    ${buildout:develop_eggs}
+interpreter = py
+dependent-scripts = true
 
 [versions]
 gp.recipe.node = 0.10.22.1
